--- a/views/index.html
+++ b/views/index.html
@@ -92,7 +92,7 @@
                 <div class="row form-group">
                     <div class="col-12 ">
                         <p>Voucher</p>
-                        <p id="p-voucher-id">No ID</p>
+                        <p id="p-voucher-id">No Id</p>
                         <p id="p-voucher-percent">0%</p>
                     </div>
                 </div>
@@ -164,16 +164,16 @@
     // Gán các hằng số cần dùng gọi sever
     const gREQUEST_STATUS_OK = 200
     const gREQUEST_READY_STATUS_FINISH_AND_OK = 4;
-    const gBASE_URL = "/devcamp-lucky-dice";
+    const gBASE_URL = "/lucky-dice";
 
     const gEND_OF_ROW_COL = -1;
     const vUTF8_TEXT_APPLICATION_HEADER = "application/json;charset=UTF-8";
 
     //Tạo đối tượng
     var gUserData = {
-        username: "",
-        firstname: "",
-        lastname: ""
+        userName: "",
+        firstName: "",
+        lastName: ""
     };
 
     /***REGION 2  */
@@ -255,24 +255,24 @@
 
     //Get data
     function getData(paramUser) {
-        paramUser.username = $("#inp-user-name").val();
-        paramUser.firstname = $("#inp-first-name").val();
-        paramUser.lastname = $("#inp-last-name").val();
+        paramUser.userName = $("#inp-user-name").val();
+        paramUser.firstName = $("#inp-first-name").val();
+        paramUser.lastName = $("#inp-last-name").val();
         console.log(paramUser)
 
     }
 
     //Valid Data input
     function validData(paramData) {
-        if (paramData.username.trim() === "") {
+        if (paramData.userName.trim() === "") {
             alert("Bạn phải nhập user name ")
             return false;
         }
-        if (paramData.firstname.trim() === "") {
+        if (paramData.firstName.trim() === "") {
             alert("Bạn phải nhập first name ")
             return false;
         }
-        if (paramData.lastname.trim() === "") {
+        if (paramData.lastName.trim() === "") {
             alert("Bạn phải nhập last name ")
             return false;
         }
@@ -337,7 +337,7 @@
         if (vTenPhanThuong === null) {
             $("#img-present").attr("src", "LuckyDiceImages/no-present.jpg")
         }
-        if (vTenPhanThuong === "mũ") {
+        if (vTenPhanThuong === "Mũ") {
             $("#img-present").attr("src", "LuckyDiceImages/hat.jpg")
         }
         if (vTenPhanThuong === "Ô tô") {
@@ -346,7 +346,7 @@
         if (vTenPhanThuong === "Xe máy") {
             $("#img-present").attr("src", "LuckyDiceImages/motobike.jpg")
         }
-        if (vTenPhanThuong === "áo") {
+        if (vTenPhanThuong === "Áo") {
             $("#img-present").attr("src", "LuckyDiceImages/t-shirt.jpg")
         }
         if (vTenPhanThuong === "Sách") {
@@ -374,12 +374,12 @@
 
     // Gọi APISERVER lấy lịch sử chơi
     function callApiServerDiceHistory() {
-        //Gán giá trị username
-        var vDataListNameTest = gUserData.username;
+        //Gán giá trị userName
+        var vDataListNameTest = gUserData.userName;
         //Tạo một request mới
         var vXmlHttpDiceHistory = new XMLHttpRequest();
         //Gửi một yêu cầu đén server
-        vXmlHttpDiceHistory.open("GET", gBASE_URL + "/dice-history?username=" + vDataListNameTest, true);
+        vXmlHttpDiceHistory.open("GET", gBASE_URL + "/dice-history?userName=" + vDataListNameTest, true);
         vXmlHttpDiceHistory.send();
         vXmlHttpDiceHistory.onreadystatechange =
             function() {
@@ -402,12 +402,12 @@
 
     //Gọi APISERVER lấy giá trị Voucher history
     function callApiServerVoucherHistory() {
-        //Gán giá trị username
-        var vDataListNameTest = gUserData.username;
+        //Gán giá trị userName
+        var vDataListNameTest = gUserData.userName;
         //Tạo một request mới
         var vXmlHttpVoucherHistory = new XMLHttpRequest();
         //Gửi một yêu cầu đén server
-        vXmlHttpVoucherHistory.open("GET", gBASE_URL + "voucher-history?username=" + vDataListNameTest, true);
+        vXmlHttpVoucherHistory.open("GET", gBASE_URL + "voucher-history?userName=" + vDataListNameTest, true);
         vXmlHttpVoucherHistory.send();
         vXmlHttpVoucherHistory.onreadystatechange =
             function() {
@@ -464,12 +464,12 @@
 
     //Gọi APISERVER lấy giá trị Precent history
     function callApiServerPresentHistory() {
-        //Gán giá trị username
-        var vDataListNameTest = gUserData.username;
+        //Gán giá trị userName
+        var vDataListNameTest = gUserData.userName;
         //Tạo một request mới
         var vXmlHttpPresentHistory = new XMLHttpRequest();
         //Gửi một yêu cầu đén server
-        vXmlHttpPresentHistory.open("GET", gBASE_URL + "/prize-history?username=" + vDataListNameTest, true);
+        vXmlHttpPresentHistory.open("GET", gBASE_URL + "/prize-history?userName=" + vDataListNameTest, true);
         vXmlHttpPresentHistory.send();
         vXmlHttpPresentHistory.onreadystatechange =
             function() {
